--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -8,14 +8,14 @@
  }
 
 body {
+
   user-select: none;
   position: relative;
   color: white;
   height: 100vh;
   background: linear-gradient(
     180deg,
-    #39FF14 -30.09%,
-    #000000 80.77%,
+    #123455 -30.09%,
     #000000 129.35%
   );
   font-family: sans-serif;
@@ -73,6 +73,35 @@ a:hover {
   align-items: center;
   margin: 20px;
   user-select: text;
+}
+
+.img {
+ max-width: 70%;
+ display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.flex {
+  display:flex;
+  justify-content: center;
+  margin: 5px;
+}
+
+.flexLessSpace {
+  display:flex;
+  justify-content: center;
+  /* margin: 5px; */
+}
+
+.flex1 {
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.center {
+  padding-top: 120px
 }
 
 .specialDiv {
